--- a/testimonial-slider/testimonial-slider-v1/style.css
+++ b/testimonial-slider/testimonial-slider-v1/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: 'Sen', sans-serif;
+  font-family: "Sen", sans-serif;
   min-height: 100vh;
   position: relative;
   display: flex;
@@ -23,7 +23,7 @@ body {
 }
 
 main {
-  width: 800px;
+  width: 600px;
 }
 
 main h1 {
@@ -35,44 +35,33 @@ main h1 {
 
 .slide-row {
   display: flex;
-  width: 3200px;
+  width: 2400px;
   transition: 0.5s;
 }
 
 .slide-col {
-  width: 800px;
-  height: 400px;
-  position: relative;
-}
-
-.user-img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-}
-
-.user-img img {
-  height: 100%;
+  display: flex;
+  justify-content: row;
+  max-width: 600px;
+  height: 300px;
+  background: rgb(150, 6, 73);
   border-radius: 10px;
+}
+
+img {
+  height: 100%;
+  display: block;
+  border-radius: 10px 0 0 10px;
 }
 
 .user-text {
-  background: rgb(150, 6, 73);
   width: 520px;
-  height: 270px;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  border-radius: 10px;
   color: #d3d4d6;
   padding: 45px;
-  z-index: 2;
 }
 
 .user-text p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
 }
 
