--- a/card-hover-effect-animated-text/style.css
+++ b/card-hover-effect-animated-text/style.css
@@ -53,7 +53,7 @@ body {
   border-radius: 10px;
   background-image: var(--image-src);
   background-position: 50% 50%;
-  background-size: 125%;
+  background-size: cover;
   transition: background 1000ms ease;
   box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.03),
     0 22.3px 17.9px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
@@ -61,7 +61,7 @@ body {
 }
 
 .card:hover {
-  background-position: 50% 100%;
+  background-position: 50% 80%;
 }
 
 .card:hover > figcaption {
