--- a/testimonial-slider-v1/style.css
+++ b/testimonial-slider-v1/style.css
@@ -16,14 +16,21 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(images/screenshot.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: blur(50px);
+  background-image: radial-gradient(
+      at 40% 20%,
+      hsla(28, 100%, 74%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
 }
 
 main {
-  width: 600px;
+  width: 800px;
 }
 
 main h1 {
@@ -35,39 +42,56 @@ main h1 {
 
 .slide-row {
   display: flex;
-  width: 2400px;
+  width: 3200px;
   transition: 0.5s;
 }
 
 .slide-col {
-  display: flex;
-  justify-content: row;
-  max-width: 600px;
-  height: 300px;
-  background: rgb(150, 6, 73);
-  border-radius: 10px;
+  width: 800px;
+  height: 400px;
+  position: relative;
 }
 
-img {
+.user-img {
+  position: absolute;
+  top: 0;
+  right: 0;
   height: 100%;
-  display: block;
-  border-radius: 10px 0 0 10px;
+}
+
+.user-img img {
+  height: 100%;
+  border-radius: 10px;
+  width: 320px;
+  object-fit: cover;
 }
 
 .user-text {
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
   width: 520px;
-  color: #d3d4d6;
+  height: 270px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 10px;
+  color: #4d4352;
   padding: 45px;
+  z-index: 2;
 }
 
 .user-text p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
 }
 
 .user-text h2 {
   margin: 35px 0 5px;
-  color: #fff;
+  color: #4d4352;
 }
 
 .indicator {
