--- a/octoberfest-landing-page/style.css
+++ b/octoberfest-landing-page/style.css
@@ -108,7 +108,7 @@ body {
   position: relative;
   border-radius: 10px;
   text-decoration: none;
-  padding: 1rem 2rem;
+  padding: 0.8rem 2rem;
   font-size: 1rem;
   font-weight: bold;
   border: none;
@@ -236,26 +236,14 @@ a:active {
   object-fit: cover;
   object-position: 50% 50%;
   z-index: 2;
+  transition: all 0.45s ease-in 0.2s;
 }
 
 .card:hover > .card-img {
-  animation: hovereffect 0.6s ease 1 normal forwards;
-}
-
-@keyframes hovereffect {
-  0% {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    border-radius: 20px;
-  }
-
-  100% {
-    width: 50%;
-    height: 50%;
-    top: 50%;
-    border-radius: 0 0 0 20px;
-  }
+  width: 50%;
+  height: 50%;
+  top: 50%;
+  border-radius: 0 0 0 20px;
 }
 
 /* ------ */
@@ -275,7 +263,7 @@ body.prevent-background-scroll {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 20;
-  animation: openModal 0.5s ease 1 normal;
+  animation: openModal 0.3s ease-in-out 1 normal;
 }
 
 @keyframes openModal {
@@ -332,20 +320,22 @@ body.prevent-background-scroll {
 .close-icon {
   font-size: 1.6rem;
   color: #000;
+  transform: scale(1);
+  transition: all 0.3s;
+}
+
+.close-icon:hover {
+  transform: scale(1.3);
 }
 
 .modal-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding: 30px 50px 10px;
+  padding: 30px 50px;
   height: 70vh;
   overflow-y: auto;
-}
-
-.modal-one {
-  padding: 70px 50px 10px;
 }
 
 .modal-body > img {
